tests/integration/fail/arrays/elem_at_empty_array.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::Other'
%elem_at% [] 0
